sidebar was overlapping todo modal...fixed that

--- a/src/Components/NewTodoModal/NewTodoModal.css
+++ b/src/Components/NewTodoModal/NewTodoModal.css
@@ -3,7 +3,7 @@
   width: 100vw;
   height: 100vh;
   position: fixed;
-  z-index: 5;
+  z-index: 11;
   display: grid;
   place-items: center;
   top: 0;
